# Hand-of-Talos

./: .gitignore  .gitmodules  CMakeLists.txt  DEMO  Dashboard.kv  LICENSE  OK  buzz.py  cv2test.py  dashboard.kv  dirStruct.md  joystick.py  main.py  packet.md  photo.py  photo.sh  readme.md  repetability.py  robot.py  singleServo.py  text.txt  training.py  workspace.code-workspace  your_program
archive/: mainwindow.h
archive/libRobotExtension/: RobotArm.cpp  RobotArm.hpp
client/: client.cpp  main.cpp
cpp/: CMakeLists.txt  NOTES.md  a.out  ik.c
cpp/extra/: RobotDashBoard_en_US.ts  RobotDashBoard_ro_ro.ts
cpp/i2cpp/: Arm_exc.hpp  Arm_lib.hpp  a.out  build_static.sh  i2c_test.cpp  main.cpp  tester.py
cpp/lib/: RobotArm.hpp  client.hpp  mainwindow.h  mainwindow.ui  server.hpp
cpp/lib/libJoystick/lib/: Joystick.hpp
cpp/lib/libJoystick/src/: Joystick.cpp
cpp/lib/libRobot/include/: Arm_exc.hpp  Arm_lib.hpp
cpp/lib/libRobot/src/: Arm_lib.cpp
cpp/src/: RASM_Interpreter.cpp  RobotArm.cpp  camera.cpp  main.cpp  mainwindow.cpp  pickandplace.rasm  test.cpp  workspace.code-workspace
docs/: HelpTOC.json  Map.jhm  config.json  directory-structure.html  goals.html  high-level.html  key-concepts.html  overview.html
docs/docfiles/: hotd.tree  writerside.cfg
docs/docfiles/cfg/: buildprofiles.xml
docs/docfiles/topics/: Directory-structure.md  Goals.md  High-level.md  Key-concepts.md  Overview.md
extra/: RobotDashBoard_en_US.ts  RobotDashBoard_ro_ro.ts
firmware/: firmware.ino
inc/: BaseTranslationAxis.hpp  Image.hpp  Logger.hpp  Watchdog.hpp  backup.ui  mainwindow.h  mainwindow.hpp  mainwindow.ui
lib/: BaseTranslationAxis.hpp  OpenCV-4-6-0.sh  client.hpp  mainwindow.h  mainwindow.ui  mainwindow_redesign.ui  server.hpp
lib/libRASM/Assembler/inc/: Instruction.hpp  isa.hpp
lib/libRASM/Assembler/src/: assembler.cpp
lib/libRobotExtension/: RobotArm.cpp  RobotArm.hpp
programs/: pickAndPlace.rasm  pickAndPlace2.rasm
python(legacy)/: color_calib.py  forcetorque.py  joystick.py  main.py  photo.py  requirements.txt  robot.py  test.py
src/: BaseTranslationAxis.cpp  RASM_Interpreter.cpp  main.cpp  mainwindow.cpp
src/client/: main.cpp  mainwindow.cpp
src/init/: camera.cpp  device.cpp  peripherals.cpp  setup.cpp  signals.cpp
src/modules/: BaseTranslationAxis.cpp  Logger.cpp  RASM.cpp  RASM_Interpreter.cpp  camera.cpp  jog.cpp  joystick.cpp  menuIdentifier.hpp  motion.cpp  teachIn.cpp  translationAxis.cpp  ui.cpp  userInterface.cpp  watchdog.cpp
src/modules/libRobotExtension/: RobotArm.cpp  RobotArm.hpp
src/modules/logger/: Logger.cpp  Logger.hpp
src/operation_modes/: jog_mode.cpp  learn_mode.cpp  program_mode.cpp  tracking_mode.cpp
src/server/: RASM_Interpreter.cpp  main.cpp  server.cpp
